--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,3 @@
-#:schema node_modules/wrangler/config-schema.json
-name = "bolt"
-compatibility_flags = ["nodejs_compat"]
+name = "bolt-diy"
 compatibility_date = "2025-01-24"
-pages_build_output_dir = "./build/client"
-send_metrics = false
+main = "index.js"  # اسم الملف الرئيسي
