--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,6 @@
-name = "bolt-diy"
-compatibility_date = "2025-01-24"
-main = "index.js"  # اسم الملف الرئيسي
+#:schema node_modules/wrangler/config-schema.json
+name = "bolt"
+compatibility_flags = ["nodejs_compat"]
+compatibility_date = "2024-07-01"
+pages_build_output_dir = "./build/client"
+send_metrics = false
